# dynamodb-s3-sample

./: .gitignore  .pre-commit-config.yaml  CDK_Nag修正レポート.md  README.md  cdk-nag.md
.claude/commands/: fix-nag.md
.claude/commands/git/: commit.md
.moon/: workspace.yml
package/api/: app.py  main.py  moon.yml  pyproject.toml
package/api/core/: s3.py
package/api/db/: book.py
package/api/model/: book.py  env.py  log.py  pyproject.py
package/api/router/: books.py
package/infra/: app.py  cdk-nag.md  cdk.json  cdk_nag_report.txt  moon.yml  pyproject.toml
package/infra/src/construct/: bucket.py  function.py  rest_api.py  table.py
package/infra/src/model/: project.py
package/infra/src/stack/: app_stack.py
package/infra/tests/: test_cdk_nag.py
