[project]
name = "dynamodb-s3-sample"
version = "1.0.0"
description = "DynamoDB, S3, FastAPI samples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.216.0",
    "constructs>=10.4.2",
]

[dependency-groups]
dev = [
    "cdk-nag>=2.37.34",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, Pyflakes, isort
fixable = ["ALL"]
